k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderflow-api
  namespace: orderflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: orderflow-api

  template:
    metadata:
      labels:
        app: orderflow-api

    spec:
      serviceAccountName: orderflow

      containers:
        - name: api
          image: 942909611186.dkr.ecr.us-east-1.amazonaws.com/orderflow-api:a38911a
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          volumeMounts:
            - name: rds-secrets
              mountPath: /mnt/secrets
              readOnly: true

            - name: rds-ca
              mountPath: /etc/rds-ca
              readOnly: true

          readinessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

      volumes:
        - name: rds-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true

            volumeAttributes:
              secretProviderClass: orderflow-rds

        - name: rds-ca
          configMap:
            name: orderflow-rds-ca

---
apiVersion: v1
kind: Service
metadata:
  name: orderflow-api
  namespace: orderflow

spec:
  type: ClusterIP

  selector:
    app: orderflow-api

  ports:
    - name: http
      port: 80
      targetPort: 3000
